WexGit/Wex_DX/force-app/main/default/objects/Lead_Convert_Mappings__mdt/Lead_Convert_Mappings__mdt.object-meta.xml
<CustomObject>
    <description>Used to map Lead to Account records via keys and then present the return back to the user via lead conversion to attach to an existing account when match is found</description>
    <label>Lead Convert Mappings</label>
    <pluralLabel>Lead Convert Mapping</pluralLabel>
</CustomObject>