WexGit/Wex_DX/force-app/main/default/objects/Lead_Convert_Mappings__mdt/fields/Account_Key1__c.field-meta.xml
<CustomField>
    <fullName>Account_Key1__c</fullName>
    <label>Account Key1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>