WexGit/Wex_DX/force-app/main/default/objects/Lead_Convert_Mappings__mdt/fields/Account_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Account_RecordType__c</fullName>
    <label>Account.RecordType</label>
    <length>30</length>
    <type>Text</type>
</CustomField>