WexGit/Wex_DX/force-app/main/default/objects/Lead_Convert_Mappings__mdt/fields/Lead_Key2__c.field-meta.xml
<CustomField>
    <fullName>Lead_Key2__c</fullName>
    <label>Lead Key2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>