WexGit/Wex_DX/force-app/main/default/objects/Lead_Convert_Mappings__mdt/fields/Lead_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Lead_RecordType__c</fullName>
    <label>Lead.RecordType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>